# identiconspp

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/modules/: CompilerSetup.cmake
include/: byte_iterator.hpp  color.hpp  pixel.hpp
src/: CMakeLists.txt  color.cpp  main.cpp  pixel.cpp
